public abstract class Animal
{
    public abstract void eat();
    public abstract void makeSound();
}
