public class Bird extends Animal implements Flyable
{

    @Override
    public void eat() {

    }

    @Override
    public void makeSound() {

    }

    @Override
    public void fly() {

    }
}
