public class Cat extends Animal implements Runnable
{

    @Override
    public void eat() {

    }

    @Override
    public void makeSound() {

    }

    @Override
    public void run() {

    }
}
